--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -2,15 +2,15 @@
 # Docs: https://docs.github.com/en/actions/writing-workflows
 
 # ✍️ Description:
-# This action is used to run eslint checks
+# This action is used to run commitlint, biome and knip checks
 # Runs on pull requests and pushes to  the main/master branches
 # Based on the event type:
-#   - If it's a pull request, it will run eslint, then add the check to the PR as well as annotate the code with the errors and warnings.
-#   - If it's a push to main/master, it will run the type checking and fail if there are any errors.
+#   - If it's a pull request, it will run commitlint, biome and knip, then add the check to the PR as well as annotate the code with the errors and warnings.
+#   - If it's a push to main/master, it will run commitlint, biome and knip and fail if there are any errors.
 
 # 🚨 GITHUB SECRETS REQUIRED: NONE
 
-name: Lint Check (eslint, prettier, knip)
+name: Lint Check (commitlint, biome, knip)
 
 on:
   push:
@@ -20,12 +20,12 @@ on:
 
 jobs:
   lint:
-    name: Lint Check (eslint, prettier, knip)
+    name: Lint Check (commitlint, biome, knip)
     runs-on: ubuntu-latest
 
     steps:
       - name: 📦 Checkout project repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
@@ -37,20 +37,25 @@ jobs:
       - name: 📦 Setup Node + PNPM + install deps
         uses: ./.github/actions/setup-node-pnpm-install
 
-      - name: 🏃‍♂️ Run ESLint
+      - name: 🏃‍♂️ Validate current commit (last commit) with commitlint
+        if: github.event_name == 'push'
+        run: pnpm commitlint --last --verbose
+
+      - name: 🏃‍♂️ Validate PR commits with commitlint
         if: github.event_name == 'pull_request'
-        uses: reviewdog/action-eslint@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-review
-          eslint_flags: ". --ext .js,.jsx,.ts,.tsx,.astro"
-
-      - name: 🏃‍♂️ Run ESLint
-        if: github.event_name != 'pull_request'
-        run: pnpm lint
-
-      - name: 🏃‍♂️ Run Prettier
-        run: pnpm format:check
+        run: pnpm commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
       - name: 🏃‍♂️ Run Knip
         run: pnpm knip
+
+      - name: 🏃‍♂️ Run Biome
+        if: github.event_name == 'pull_request'
+        uses: mongolyy/reviewdog-action-biome@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-review
+
+      - name: 🏃‍♂️ Run Biome
+        if: github.event_name != 'pull_request'
+        run: pnpm biome ci
+
