--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
   "recommendations": [
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
+    "biomejs.biome",
     "yoavbls.pretty-ts-errors",
     "streetsidesoftware.code-spell-checker",
     "formulahendry.auto-close-tag",
